--- a/deep.html
+++ b/deep.html
@@ -39,7 +39,7 @@
   </style>
 </head>
 <body>
-  <h1>DeepSeek AI Search</h1>
+  <h1><a href="https://reduceimages-sigma.vercel.app/">DeepSeek AI Search</a></h1>
   <form id="search-form">
     <input type="text" id="query" placeholder="Enter your query">
     <button id="search-button">Search</button>
